adding demisaucepy to, ui mods to new theme

--- a/views/admin_base.html
+++ b/views/admin_base.html
@@ -12,7 +12,7 @@
 
 {% endblock %}
 {% block topmenu %}
-<ul>
+    <li class="page_item page-item-2"><a href="/" title="Public">View Site</a></li>
     <li class="page_item page-item-2"><a href="/admin/entry/list/post" title="Write">Posts</a></li>
     <li class="page_item page-item-2"><a href="/admin/links/blogroll" title="Blogroll">Blogroll</a></li>
     <li class="page_item page-item-2"><a href="/admin/entry/list/page" title="Pages">Pages</a></li>
@@ -20,7 +20,7 @@
     <li class="page_item page-item-2" style="float:right;"><a href="{{ url }}" title="Admin">{{ url_linktext }}</a></li>
     <li class="page_item page-item-2" style="float:right;font-size:1em"><a href="#" id="dshelp" rel="facebox" title="help">feedback</a></li>
     <div class="clear"></div>
-</ul>
+
 
 <div id="hiddenmessage" style="" ></div>
 
