--- a/static/freshpress.css
+++ b/static/freshpress.css
@@ -8,16 +8,7 @@ Description: Inspired by WordPress 2.5 release "Brecker". View more <a href="htt
 This theme was designed and built by Hyder Jaffari of Weborithm Design Studio.
 
 */
-/* Layout.css   */
-/*two equal 174px right columns 
-#leftsidebar {width: 174px;}
-#rightsidebar {width: 174px;}
-#content {width: 576px;margin: 0px 15px 0px 0px;}
- */
-/*one right column right columns  */
-#leftsidebar {width: 0px;}
-#rightsidebar {width: 274px;}
-#content {width: 665px;margin: 0px 0px 0px 0px;}
+
 
 body {margin: 0px;padding: 0px;font: 0.9em Tahoma, Verdana, sans-serif;}
 .clear {padding: 0px;margin: 0px;clear: both;}
@@ -50,35 +41,7 @@ img.alignleft {float: left;margin: 0px 10px 10px 0px;padding: 0px;border: 1px so
 .alignleft {float: left;padding: 0px;}
 .navigation {display: block;text-align: center;padding: 10px;font-size: 1em;}
 .video {text-align:center;margin: 0px;padding: 0px 0px 20px;}
-#dashboard, #nav ul li a, .fcomments a, #content .post h2 {letter-spacing: 1px;}
-#content h3, #comments h3 {margin: 10px;padding: 0px;border-bottom: 1px solid #e5e5e5;font: normal 1.4em Georgia, "Times New Roman", Times, serif;color: #333;}
-#comments h3 {margin: 0px 0px 2px;padding:5px;background: #ccc;border-bottom: none;}
-/* Other Theme Properties Ends */
 
-/* Dashboard Area Starts */
-#dashboard {padding: 10px 0px;background: #464646;color: #cccccc;}
-#dashboard .dash {width: 972px;margin: auto;text-align: right;}
-/* Dashboard Area Ends */
-
-/* Search Elements Starts */
-#searchtop {float: left;border:1px solid #333;}
-#searchtop #s {font-size: 1em;padding: 2px 5px;color: #333;border: none;}
-#searchform {margin: auto;text-align:center;padding: 0px 0px 10px;}
-#searchform #s {border:1px solid #333;width: 166px;padding: 2px;margin: 0px 0px 5px;}
-/* Search Elements Ends */
-
-/* Header Elements Starts */
-#header {background: #e4f2fd;padding: 20px 0px;border-bottom: 1px solid #c6d9e9;}
-.headings {width: 972px;margin: auto;}
-#header h1 {font: normal 2em Georgia, "Times New Roman", Times, serif;color: #555555;margin: 0px;padding: 0px;float: left;}
-#header h2 {float: right;padding: 9px 0px 0px;margin: 0px;color: #d54e21;font: normal 1.4em Georgia, "Times New Roman", Times, serif;}
-/* Header Elements Ends */
-
-/* Navigation Starts */
-#nav {padding: 0px;margin: 0px 0px 15px;border-bottom: 1px solid #dadada;}
-#nav ul {list-style: none;margin: 10px auto;padding: 0px;width: 972px;}
-#nav ul li {float: left;display: block;font-size: 1em;font-weight: bold;color: #2583ad;padding: 0px 20px 0px 0px;margin: 0px;}
-/* Navigation Ends */
 
 /* Main Container Starts */
 #container {padding: 0px 0px 20px;margin: 0px auto 0px;width: 972px;}
@@ -120,8 +83,8 @@ img.alignleft {float: left;margin: 0px 10px 10px 0px;padding: 0px;border: 1px so
 #content .post blockquote p {margin: 0px;padding: 5px 5px 10px;font-size: 1.1em;line-height: 24px;}
 #content .quoteleft {width: 200px;float: left;padding: 5px 10px;background: #f2f2f2 url(images/quote.gif) no-repeat left top;text-indent: 30px;color: #000;margin: 10px 10px 0px 0px;}
 #content .quoteright {width: 200px;float: right;padding: 5px 10px;background: #f2f2f2 url(images/quote.gif) no-repeat left top;text-indent: 30px;color: #000;margin: 10px 0px 0px 10px;}
-#content .commentmeta {font-size: 0.8em;font-weight: bold;text-align:right;border-bottom: 1px solid #ccc;margin: 0px 0px 25px;}
-#content .commentmeta a {background: #fff;padding: 5px;top: 7px;position: relative;text-decoration: none;border: 1px solid #ccc;}
+#content .commentmeta {font-size: 0.8em;font-weight: bold;text-alignx:right;border-bottom: 1px solid #ccc;margin: 0px 0px 25px;}
+#content .commentmetax a {background: #fff;padding: 5px;top: 7px;position: relative;text-decoration: none;border: 1px solid #ccc;}
 /* Content Ends */
 
 /* Left Sidebar Starts */
@@ -155,25 +118,7 @@ table#wp-calendar td {text-align: center;background: #e4f2fd;}
 /* Sidebar Tags Ends */
 
 
-/* Box Links, and action bar    border: red 1px solid;  */
-.boxlinks {font-size: 85%;}
-.inlineboxlinks {padding: 1em;margin: 1em 0;clear: left;}
-.actionbar {margin: 0px;clear: right; padding: 0px;font-size: 115%;display: block; width:100%;height:33px; }
-.actionbar a {font-size: 123%;background:#fafafa;height:22px;}
-.right {float: right;}
-.boxlinks2 {font-size: 85%;margin-top:-24px; margin-right:-11px;background-color:#ffffff;}
-.boxlinks2 a {border: 1px solid #235C9D;text-decoration: none;padding: 3px 5px;}
-.boxlinks a, .boxlinks span {margin-top:2px; display: block;vertical-align: bottom; float: left;padding: 0.2em 0.5em;margin-right: 0.15em;}
-.boxlinks span.current {border: 1px solid #235C9D;font-weight: bold;background: #235C9D;color: #fff;}
-.boxlinks a {border: 1px solid #235C9D;text-decoration: none;}
-.boxlinks a:hover {background:#E1ECF9;}
-.boxlinks a.nextprev {font-weight: bold;}
-.boxlinks span.nextprev {color: #666;}
-.boxlinks span.nextprev {border: 1px solid #ddd;color: #999;}
-ul.boxlink {list-style-type:none;}
-div.boxlinks a.current {border-bottom: 1px solid #E1ECF9;;background:#E1ECF9;	}
-.tab-spacer{background:#E1ECF9;border:0px solid #8db2e3;border-top:0 none;height:2px;font-size:1px;line-height:1px;}
-div.formbox {border:1px solid #8db2e3;margin-top:20px;}
+
 
 /*  code formatting for posts */
 .code {color: #63FF00;background: #000;overflow: auto;font: normal 12px "bitstream vera sans mono", monaco "lucida console", "courier new", courier, serif;margin: 0.9em 0; padding: 8px;}
@@ -197,24 +142,25 @@ div.formbox {border:1px solid #8db2e3;margin-top:20px;}
 /*  ADMIN area */
 .secondary {color:#999999;font-size: 80%;}
 #editable-post-name {background-color:#FFFBCC;}
-/* Comments Starts */
+
+/* comments marked for deletion
 #comments {margin: 0px;padding: 2px 0px;border-top: 1px solid #ccc;}
 #respond {margin: 2px 0px;border-bottom: 1px solid #ccc;border-top: 1px solid #ccc;background: #fff;}
 #respond h4 {margin: 2px 0px;font: normal 1.4em Georgia, "Times New Roman", Times, serif;color: #333;padding:5px;background: #ccc;}
-/* Main Comment Elements */
+
 
 ol#commentlist {margin: 0px;padding: 10px 10px 10px 30px;border-top: 1px solid #ccc;}
-ol#commentlist li { /* This is for the normal entry headings */
+ol#commentlist li {  
 	font-size: 0.8em;color: #515151;margin: 0px;padding: 10px;border: 1px solid #F0F0F0;border-bottom: none;}
-ol#commentlist .entry { /* This is for the normal entry comments */
+ol#commentlist .entry { 
 	background: #fff;border: 1px solid #F0F0F0;margin: 0px 0px 20px;padding: 10px;}
-ol#commentlist li.alternate { /* This is for the alternate entry headings */
+ol#commentlist li.alternate { 
 	margin: 0px;padding: 10px;border: 1px solid #CCC;border-bottom: none;background: #f9f9f9;}
-ol#commentlist .alternate { /* This is for the alternate entry comments */
+ol#commentlist .alternate { 
 	border: 1px solid #ccc;margin: 0px 0px 20px;padding: 10px;background: #f9f9f9;}
-ol#commentlist li.author { /* This is for the author entry headings */
+ol#commentlist li.author { 
 	margin: 0px;padding: 10px;border: 1px solid #CCC;border-bottom: none;}
-ol#commentlist .author { /* This is for the author entry comments */
+ol#commentlist .author { 
 	border: 1px solid #ccc;margin: 0px 0px 20px;padding: 10px;background: #e4f2fd;}
 ol#commentlist .entry p, ol#commentlist .author p, ol#commentlist .alternate p {
 	font-size: 0.9em;color: #333;padding: 0px;margin: 0px;line-height: 20px;}
@@ -231,7 +177,30 @@ ol#commentlist li .avatar { border: 1px solid #ccc;padding: 2px;background: #fff
 #comment_form #submit:hover {border: 1px solid #333;background: #d54e21;color: #fff;}
 #comment_form input[type="text"]:focus {	background: #ffffff;border: 1px solid #d54e21;}
 #comment_form textarea:focus {background: #fff;border: 1px solid #d54e21;}
+
+*/
 /* Comments Ends */
+
+
+/* Box Links, and action bar    border: red 1px solid;  */
+.boxlinks {font-size: 85%;}
+.inlineboxlinks {padding: 1em;margin: 1em 0;clear: left;}
+.actionbar {margin: 0px;clear: right; padding: 0px;font-size: 115%;display: block; width:100%;height:33px; }
+.actionbar a {font-size: 123%;background:#fafafa;height:22px;}
+.right {float: right;}
+.boxlinks2 {font-size: 85%;margin-top:-24px; margin-right:-11px;background-color:#ffffff;}
+.boxlinks2 a {border: 1px solid #235C9D;text-decoration: none;padding: 3px 5px;}
+.boxlinks a, .boxlinks span {margin-top:2px; display: block;vertical-align: bottom; float: left;padding: 0.2em 0.5em;margin-right: 0.15em;}
+.boxlinks span.current {border: 1px solid #235C9D;font-weight: bold;background: #235C9D;color: #fff;}
+.boxlinks a {border: 1px solid #235C9D;text-decoration: none;}
+.boxlinks a:hover {background:#E1ECF9;}
+.boxlinks a.nextprev {font-weight: bold;}
+.boxlinks span.nextprev {color: #666;}
+.boxlinks span.nextprev {border: 1px solid #ddd;color: #999;}
+ul.boxlink {list-style-type:none;}
+div.boxlinks a.current {border-bottom: 1px solid #E1ECF9;;background:#E1ECF9;	}
+.tab-spacer{background:#E1ECF9;border:0px solid #8db2e3;border-top:0 none;height:2px;font-size:1px;line-height:1px;}
+div.formbox {border:1px solid #8db2e3;margin-top:20px;}
 
 /*  Form elements */
 
