--- a/static/potlatch.css
+++ b/static/potlatch.css
@@ -137,8 +137,8 @@ a, a:visited, a:hover {color:#235C9D;}
 
 #footer {background: #464646;padding: 0px;margin: 0px 0px 0px 0px;padding: 0px 0px 45px 0px;}
 .footerinner {width: 972px;margin:auto;padding: 15px 0px 15px 0px;}
-.footerc {float: left;border: 1px solid #333;margin: 0px 22px 15px 0px;padding: 2px;width: 303px;color: #dadada;}
-.footercalt {float: left;border: 1px solid #333;margin: 0px 0px 15px 0px;padding: 2px;width: 303px;color: #dadada;}
+.footerc {float: left;margin: 0px 22px 15px 0px;padding: 2px;width: 303px;color: #dadada;}
+.footercalt {float: left;margin: 0px 0px 15px 0px;padding: 2px;width: 303px;color: #dadada;}
 .footerc h3, .footercalt h3 {font-size:110%;color: #ccc;margin: 0px;padding:5px;background: #333;letter-spacing: 1px;}
 .footerc ul, .footercalt ul {margin: 5px 0px 5px 20px;padding: 0px;list-style: square;}
 .footerc ul li, .footercalt ul li {padding: 3px 0px 6px;margin: 0px;font-size: 0.9em;}
