--- a/views/page.html
+++ b/views/page.html
@@ -15,8 +15,8 @@
     <!-- Content Starts -->
     <div id="content">
     {% for entry in entries %}
-        <!-- Post Starts -->
-        <h2><a href="/entry/{{ entry.slug }}" rel="bookmark" title="{{ entry.title }}">{{ entry.title }}</a> </h2>
+        <!-- Page Starts -->
+        <h2>{{ entry.title }}</h2>
 
         
             <!-- Post Starts -->
