--- a/views/base.html
+++ b/views/base.html
@@ -4,7 +4,6 @@
     <title>{% block title %} {{ blog.title }}{% endblock %}</title>
     <meta name="generator" content="PotlatchBlog" />
     <link rel="stylesheet" href="/static/{{ blog.theme }}" type="text/css" media="screen" />
-    <link rel="stylesheet" href="/static/potlatch.css" type="text/css" media="screen" />
     <link rel="alternate" type="application/atom+xml" title="{{ blog.title }}" href="{{ blog.feedurl }}" />
     <script type="text/javascript" src="/static/jquery-1.2.6.min.js"></script> 
     <script type="text/javascript" src="{% dsurl %}/js/ds.base.js"></script>
@@ -12,7 +11,7 @@
     <link rel="stylesheet" href="{% dsurl %}/css/ds.widgets.css" type="text/css" media="screen" />
     <script type="text/javascript" >
         jQuery(document).ready(function($) {
-            $.ds.defaults.site_slug = 'djangodemo';
+            $.ds.defaults.site_slug = '{{ blog.dsappname }}';
             $.ds.defaults.base_url = '{% dsurl %}';
         })
     </script>
@@ -68,6 +67,7 @@
         </div>
     </div>
     <!-- content Ends -->
+    <div class="push"/>
 </div>
 
 <!-- Footer Starts -->
@@ -76,22 +76,17 @@
         <div class="footerc">
             {{ blog.area1 }}
         </div>
-
         <div class="footerc">
             {{ blog.area2 }}
         </div>
-
         <div class="footercalt">
             {% dsview "feedback" "badge" %}
             {{ blog.area3 }}
             
         </div>
-
         <div class="clear"></div>
     </div>
     <div class="footerinner">
-        <div id="credits">
-        </div>
         <div  valign="bottom" align="center">
             <a href="http://code.google.com/appengine/" >
                 <img style=" position: relative; top:26px; border:0;"  src="http://code.google.com/appengine/images/appengine-noborder-120x30.gif" alt="Powered by Google App Engine" />
